--- a/plugin.xml
+++ b/plugin.xml
@@ -2,9 +2,9 @@
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="cordova-custom-config"
-    version="5.0.2">
+    version="1.0.0">
 
-    <name>cordova-custom-config</name>
+    <name>cordova-custom-config-ka</name>
     <description>Cordova/Phonegap plugin to update platform configuration files based on preferences and config-file data defined in config.xml</description>
     <author>Dave Alden</author>
 
