--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "version": "5.0.2",
-    "name": "cordova-custom-config",
+    "version": "1.0.0",
+    "name": "cordova-custom-config-ka",
     "cordova_name": "cordova-custom-config",
     "description": "Cordova/Phonegap plugin to update platform configuration files based on preferences and config-file data defined in config.xml.",
     "author": "Dave Alden",
